tests/paczka2/big_fuzzy/75984410.err
Error in line 12: S216 S216 2,7
Error in line 15: G6c2 S216 17,8
Error in line 25: D8RM1FBk S723 454,83
Error in line 21: D8RM1FBk S723 92,9
Error in line 27: D8RM1FBk S216 71,6
Error in line 39: G6c2 S216 73,3
Error in line 45: S216 S394 71,5
Error in line 49: S216 S123 82,4
Error in line 61: r2ue S216 95,6
Error in line 58: G6c2 S394 36,4
Error in line 73: G6c2 S394 90,4
Error in line 72: S216 S123 35,6
Error in line 84: 5g8YbbleuW S394 46,8
Error in line 109: r2ue S723 82,9
Error in line 123: Pp8 S723 81,7
Error in line 132: S216 S123 52,55
Error in line 138: 5g8YbbleuW S123 81,8
Error in line 147: 5g8YbbleuW S394 34,4
Error in line 153: D8RM1FBk S216 86,5
Error in line 148: S216 S123 63,6
Error in line 157: S216 S723 33,2
Error in line 158: 5g8YbbleuW S216 59,6
Error in line 154: r2ue S123 5,0
Error in line 186: Pp8 S123 34,6
Error in line 188: S216 S723 45,5
Error in line 197: OWznBH9t4SL S216 20,1
Error in line 200: OWznBH9t4SL S723 32,2
Error in line 207: Pp8 S216 313,4
Error in line 201: OWznBH9t4SL S123 39,1
Error in line 205: S216 S216 46,9
Error in line 223: r2ue S216 1,5
Error in line 224: Pp8 S123 36,8
Error in line 227: 5g8YbbleuW S216 9,2
Error in line 244: S216 S723 90,4
Error in line 229: D8RM1FBk S394 76,5
